# bulk-merge

./: Cargo.toml  README.md
fixtures/: data.csv  template.mustache
src/: error.rs  main.rs
